// MARK: Notifications
"App.Notifications.gcmKey" = "gcm.Message_ID";
"App.Notifications.TokenName" = "FCMToken";
"App.Notifications.userinfoKey" = "token";
// MARK: Domain

"User.id" = "id";
"User.name" = "name";
"User.photo" = "photo";
"User.friends" = "friends";
"User.events" = "events";
"User.mock.id" = "userId";
"User.mock.name" = "userName";
"User.mock.photo" = "userPhoto";

"Event.id" = "id";
"Event.name" = "name";
"Event.location" = "location";
"Event.date" = "date";
"Event.users" = "users";
"Event.messages" = "messages";
"Event.newUsers" = "newUsers";
"Event.mock.id" = "eventId";
"Event.mock.name" = "eventName";
"Event.mock.location" = "eventLocation";
"Event.mock.userId" = "eventUserId";

"Message.id" = "id";
"Message.sentBy" = "sentBy";
"Message.text" = "text";
"Message.mock.id" = "messageId";
"Message.mock.sentBy" = "messageSentBy";
"Message.mock.text" = "messageText";

// MARK: Resources

"Icons.signOut" = "rectangle.portrait.and.arrow.right";
"Icons.addFriends" = "person.fill.badge.plus";
"Icons.settings" = "gear";
"Icons.plus" = "plus.circle";
"Icons.edit" = "pencil";
"Icons.send" = "paperplane";
"Icons.profilePicture" = "person.fill";
"Icons.back" = "chevron.left";
"Icons.obeyedGuideline" = "checkmark.circle.fill";
"Icons.violatedGuideline" = "x.circle.fill";
"Icons.email" = "envelope.fill";
"Icons.password" = "lock.fill";
"Icons.name" = "person.circle";
"Icons.search" = "magnifyingglass";
"Icons.discloseText" = "eye.slash.fill";
"Icons.seeText" = "eye.fill";

"Guidelines.title" = "Password has to contain:";
"Guidelines.length" = "At least 8 charachters long";
"Guidelines.numeric" = "Contain a number";
"Guidelines.upperCase" = "Contain an uppercase letter";
"Guidelines.lowerCase" = "Contain an lowercase letter";

// MARK: Screens

"Login.title" = "Sign in";
"Login.emailLabel" = "Email";
"Login.passwordLabel" = "Password";
"Login.registrateLabel" = "registrate";
"Login.signInLabel" = "Sign in";
"Login.dismissButton" = "OK";

"Registration.title" = "Registration";
"Registration.emailLabel" = "Email";
"Registration.firstNameLabel" = "First name";
"Registration.lastNameLabel" = "Last name";
"Registration.passwordLabel" = "Password";
"Registration.passwordAgainLabel" = "Password again";
"Registration.registrateLabel" = "Registrate";
"Registration.dismissButton" = "OK";

"SuccessfulRegistration.title" = "Successful registration";
"SuccessfulRegistration.nextLabel" = "Next";

"Main.searchLabel" = "Search";
"Main.createLabel" = "Create an event";
"Main.dismissButton" = "OK";
"Main.placeholderText" = "You have no events planned!";

"Settings.title" = "Settings";
"Settings.saveLabel" = "Save";
"Settings.dismissButton" = "OK";

"Search.title" = "Add friends";
"Search.searchLabel" = "Search for users";
"Search.otherLabel" = "Other users";
"Search.placeholderText" = "No users found!";

"Chat.dateLabel" = "Time and Date:";
"Chat.locationLabel" = "Location:";
"Chat.messageLabel" = "Send a message";
"Chat.placeholderText" = "No messages yet!";

"EventScreen.nameLabel" = "Name of event:";
"EventScreen.dateLabel" = "Time and Date:";
"EventScreen.locationLabel" = "Location:";
"EventScreen.membersLabel" = "Members";
"EventScreen.saveLabel" = "Save";
"EventScreen.title" = "Edit event";
"EventScreen.dismissButton" = "OK";

"AddMember.title" = "Add members";
"AddMember.searchLabel" = "Search for users";
"AddMember.friendsLabel" = "Your Friends";
"AddMember.otherLabel" = "Other users";
"AddMember.friendPlaceholderText" = "No friends found!";
"AddMember.otherPlaceholderText" = "No other user found!";

// MARK: Services

"Data.userCollection" = "user";
"Data.id" = "id";
"Data.name" = "name";
"Data.friends" = "friends";
"Data.photo" = "photo";
"Data.defaultImagePath" = "profilePicture";
"Data.defaultImageType" = "image/jpeg";

"EventData.eventCollection" = "event";
"EventData.userCollection" = "user";
"EventData.id" = "id";
"EventData.events" = "events";
"EventData.users" = "users";
"EventData.messages" = "messages";
"EventData.newUsers" = "newUsers";

// MARK: Error

"Error.wrongPassword" = "Incorrect password!";
"Error.emailFormat" = "Please enter a correct email format!";
"Error.nonUser" = "There is no account for this email!";
"Error.takenEmail" = "There is already a registered account with this email!";
"Error.network" = "No internetconnection, please connect and try again!";
"Error.unknown" = "An unknown error occured, please try again later!";
"Error.nameLength" = "The name of the event needs to be at least 3 characters!";
"Error.locationLength" = "The location of the event needs to be at least 3 characters!";

// MARK: Message

"UploadMessage.success" = "Profile picture succesfully updated!";
"UploadMessage.error" = "Something went wrong, please try again later!";
